--- a/pages/blog/creating-sentro.mdx
+++ b/pages/blog/creating-sentro.mdx
@@ -1,5 +1,5 @@
 import { DefaultLayout, MainContent } from "../../layouts/DefaultLayout";
-import { MSAnimatedSection, MSButton } from "../../components";
+import { MSButton } from "../../components";
 import { ArrowLeftIcon } from "@heroicons/react/24/outline";
 import PreviewImage from "../../components/markdown/PreviewImage";
 import { MarkDownHeader } from "../../layouts/MarkdownLayout";
@@ -40,7 +40,7 @@ export default function BlogPage({ children }) {
           <MSButton style={ { position: 'relative', left: '-0.9rem', marginBottom: '0.7rem' } } link="/blog"
                     type="small" icon={ ['left', <ArrowLeftIcon/>] }>Back to all posts</MSButton>
           <MarkDownHeader title={ metadata.title } description={ metadata.description } small="Published 4/23/24" />
-          <MSAnimatedSection delay={ 0.4 }>
+          <section>
             <div className="w-full h-full max-h-md r-lg my-md" style={ { overflow: 'clip' } }>
               <PreviewImage src={ `/img/blog/creating-sentro/headliner.webp` } alt="The Sentro website homepage." />
             </div>
