--- a/pages/tools/sentro.mdx
+++ b/pages/tools/sentro.mdx
@@ -1,5 +1,5 @@
 import { tools } from '../../constants/tools';
-import { MSAnimatedSection, MSButton, MSTag, MSTitleBar } from "../../components";
+import { MSButton, MSTag, MSTitleBar } from "../../components";
 import {
   ArrowLeftIcon,
   BookOpenIcon,
@@ -20,21 +20,21 @@ export const ToolInfo = tools.filter(tool => tool.name === metadata.title)[0];
 
 Sentro is a low-level library for building token-driven design systems. It features token and key management, a way to create themeable and scalable components, helpful tools to improve the developer experiece, a way to manage themes, and create consistent and maintainable design systems.
 
-<MSAnimatedSection className="grid cols-1 @large:cols-3 gap-md mt-4xl">
-  <MSAnimatedSection>
+<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+  <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ ToolInfo }>
       <MSButton link={ToolInfo.links['docs']} icon={['left', <BookOpenIcon />]} type="small filled">Docs</MSButton>
       <MSButton link={ToolInfo.links['src']} icon={['left', <SiGithub />]} type="small filled">Source</MSButton>
     </Info>
-  </MSAnimatedSection>
-  <MSAnimatedSection delay={0.3} className="start-1 end-1 @large:start-2 @large:end-4">
+  </section>
+  <section  className="start-1 end-1 @large:start-2 @large:end-4">
     <MSTitleBar clsssName="jc-center" icon={<PhotoIcon />}>Media</MSTitleBar>
     <div className="w-full grid cols-1 gap-md mt-md">
       <PreviewImage src="/img/sentro/sentro-sample-code.webp" alt="A design system using Sentro as its core." />
     </div>
-  </MSAnimatedSection>
-</MSAnimatedSection>
+  </section>
+</section>
 
 export default function ToolPage({ children }) {
   return (
