--- a/pages/work/dev-protocol.mdx
+++ b/pages/work/dev-protocol.mdx
@@ -1,4 +1,4 @@
-import { MSAnimatedSection, MSButton, MSTitleBar } from "../../components";
+import { MSButton, MSTitleBar } from "../../components";
 import {
   PhotoIcon,
   QuestionMarkCircleIcon
@@ -18,15 +18,15 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 Dev Protocol is a solution for sustainability issues of creators activities, it is designed for the blockchain solution and enhance creators to grow their economy. During my time with the company we've made a lot of significant improvements with how they handle user interfaces. It gave birth to their design system, [Hashi](/tools/hashi). With its implementation, the new unified design language now spans across multiple products in the ecosystem. It also laid the foundation for their numerous products including [Niwa](https://niwa.xyz), [Clubs](https://clubs.place), and their main website.
 
-<MSAnimatedSection className="grid cols-1 @large:cols-3 gap-md mt-4xl">
-  <MSAnimatedSection>
+<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+  <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ WorkInfo }>
       <MSButton link="https://devprotocol.xyz" type="small filled">Website</MSButton>
       <MSButton link="https://github.com/dev-protocol" type="small filled" icon={['left', <SiGithub />]}>GitHub</MSButton>
     </Info>
-  </MSAnimatedSection>
-  <MSAnimatedSection delay={0.3} className="start-1 end-1 @large:start-2 @large:end-4">
+  </section>
+  <section className="start-1 end-1 @large:start-2 @large:end-4">
     <MSTitleBar clsssName="jc-center" icon={<PhotoIcon />}>Media</MSTitleBar>
     <div className="w-full grid cols-1 gap-md mt-md">
       <PreviewImage src="/img/devprotocol/devprotocol-clubs.webp" alt="Dev Protocol's Clubs." />
@@ -34,8 +34,8 @@ Dev Protocol is a solution for sustainability issues of creators activities, it 
       <PreviewImage src="/img/devprotocol/devprotocol-niwa.webp" alt="Dev Protocol's Niwa." />
       <PreviewImage src="/img/devprotocol/devprotocol-stakes-social.webp" alt="Dev Protocol's stakes.social." />
     </div>
-  </MSAnimatedSection>
-</MSAnimatedSection>
+  </section>
+</section>
 
 export default function WorkPage({ children }) {
   return (
