--- a/pages/work/pycord.mdx
+++ b/pages/work/pycord.mdx
@@ -1,4 +1,4 @@
-import { MSAnimatedSection, MSButton, MSTitleBar } from "../../components";
+import { MSButton, MSTitleBar } from "../../components";
 import {
   PhotoIcon,
   QuestionMarkCircleIcon
@@ -18,21 +18,21 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 Pycord is a modern Discord bot framework built in Python. The goal is to make an intuitive interface, one that is simple to use without compromising  the features. The library is maintained by the core team, with the support of the community. New features are added regularly to keep up with the ever-changing Discord API. Apart from developing the website, I've also built the [guide](https://guide.pycord.dev/) website, it is now maintained by the core team.
 
-<MSAnimatedSection className="grid cols-1 @large:cols-3 gap-md mt-4xl">
-  <MSAnimatedSection>
+<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+  <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ WorkInfo }>
       <MSButton link="https://pycord.dev" type="small filled">Website</MSButton>
       <MSButton link="https://github.com/Pycord-Development" type="small filled" icon={['left', <SiGithub />]}>Source</MSButton>
     </Info>
-  </MSAnimatedSection>
-  <MSAnimatedSection delay={0.3} className="start-1 end-1 @large:start-2 @large:end-4">
+  </section>
+  <section  className="start-1 end-1 @large:start-2 @large:end-4">
     <MSTitleBar clsssName="jc-center" icon={<PhotoIcon />}>Media</MSTitleBar>
     <div className="w-full grid cols-1 gap-md mt-md">
       <PreviewImage src="/img/pycord/pycord-guide.webp" alt="The guide's introduction page." />
     </div>
-  </MSAnimatedSection>
-</MSAnimatedSection>
+  </section>
+</section>
 
 export default function WorkPage({ children }) {
   return (
