Change module imports to relative

--- a/pages/blog/creating-sentro.mdx
+++ b/pages/blog/creating-sentro.mdx
@@ -1,8 +1,8 @@
-import { MSButton } from "@/components";
+import { MSButton } from "../../components";
 import { ArrowLeftIcon } from "@heroicons/react/24/outline";
-import PreviewImage from "@/components/markdown/PreviewImage";
-import { DefaultLayout, MainContent } from "@/layouts/DefaultLayout";
-import { MarkDownHeader } from "@/layouts/MarkdownLayout";
+import PreviewImage from "../../components/markdown/PreviewImage";
+import { DefaultLayout, MainContent } from "../../layouts/DefaultLayout";
+import { MarkDownHeader } from "../../layouts/MarkdownLayout";
 
 export const metadata = {
   title: 'Creating Sentro',
