--- a/pages/tools/sentro.mdx
+++ b/pages/tools/sentro.mdx
@@ -1,7 +1,6 @@
 import { tools } from '../../constants/tools';
-import { MSButton, MSTag, MSTitleBar } from "../../components";
+import { MSButton, MSTitleBar } from "../../components";
 import {
-  ArrowLeftIcon,
   BookOpenIcon,
   PhotoIcon,
   QuestionMarkCircleIcon
