--- a/pages/work/luwal-sining-pagganap.mdx
+++ b/pages/work/luwal-sining-pagganap.mdx
@@ -1,12 +1,8 @@
-import DefaultLayout from "../../layouts/DefaultLayout";
-
-import { MSButton, MSTag, MSTitleBar } from "../../components";
+import { MSTitleBar } from "../../components";
 import {
-  ArrowLeftIcon,
   PhotoIcon,
   QuestionMarkCircleIcon
 } from "@heroicons/react/24/outline";
-import PreviewImage from "../../components/markdown/PreviewImage";
 import { works } from "../../constants/works";
 import MarkdownLayout from "../../layouts/MarkdownLayout";
 import Info from "../../components/markdown/Info";
