Add animation to markdown pages

--- a/pages/tools/hashi.mdx
+++ b/pages/tools/hashi.mdx
@@ -22,7 +22,7 @@ Hashi is Dev Protocol's design system. Aiming to bring a unified user experience
 
 It boasts a wide range of utilities, scalable component architecture, great API and developer experience, and the ability to scale the design system based on the product's own design needs. It gives you the ability to customize the global and component-level themes, create layouts, build specialized components and layouts, and more without compromise.
 
-<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ ToolInfo }>
