--- a/pages/tools/sentro.mdx
+++ b/pages/tools/sentro.mdx
@@ -19,7 +19,7 @@ export const ToolInfo = tools.filter(tool => tool.name === metadata.title)[0];
 
 Sentro is a low-level library for building token-driven design systems. It features token and key management, a way to create themeable and scalable components, helpful tools to improve the developer experiece, a way to manage themes, and create consistent and maintainable design systems.
 
-<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ ToolInfo }>
