--- a/pages/work/inm-audio.mdx
+++ b/pages/work/inm-audio.mdx
@@ -19,7 +19,7 @@ INM Audio is one of the Philippine's leading brands when it comes in custom in-e
 
 They've tasked me to make a webapp that would help them streamline the first half of the ordering process (choosing the model, and designing the IEM) and make it more engaging and personal to the end-user. The webapp was built using React, Three, and SCSS.
 
-<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ WorkInfo }>
