--- a/pages/work/luwal-sining-pagganap.mdx
+++ b/pages/work/luwal-sining-pagganap.mdx
@@ -16,7 +16,7 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 LSP's main website and performance platform. It featured an online show catalogue, platform for online shows, artist directory, dashboard to edit information, and show scheduling.
 
-<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ WorkInfo }>
