--- a/pages/work/purple-cress.mdx
+++ b/pages/work/purple-cress.mdx
@@ -17,7 +17,7 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 Purple Cress was a Japanese manga scanlation group. Their scanlation work is diverse. From one-shots, to short form series, to the larger serialized series. It boasts an in-house built manga reader with basic accessibility features, a beautiful UI to navigate the scanlation's portfolio, and an admin panel to manage the content published.
 
-<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ WorkInfo }>
