--- a/pages/work/pycord.mdx
+++ b/pages/work/pycord.mdx
@@ -18,7 +18,7 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 Pycord is a modern Discord bot framework built in Python. The goal is to make an intuitive interface, one that is simple to use without compromising  the features. The library is maintained by the core team, with the support of the community. New features are added regularly to keep up with the ever-changing Discord API. Apart from developing the website, I've also built the [guide](https://guide.pycord.dev/) website, it is now maintained by the core team.
 
-<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ WorkInfo }>
