--- a/pages/work/wearecoral.mdx
+++ b/pages/work/wearecoral.mdx
@@ -22,7 +22,7 @@ I designed and implemented the conversion pages. The experience was carefully cr
 
 I've also made improvements to the onboarding flows, modal UIs, and overall platform experience.
 
-<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ WorkInfo }>
