--- a/pages/work/blockcorp.mdx
+++ b/pages/work/blockcorp.mdx
@@ -16,7 +16,7 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 The platform to order Growtopia-related services.
 
-<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ WorkInfo }>
