--- a/pages/work/growstocks.mdx
+++ b/pages/work/growstocks.mdx
@@ -17,7 +17,7 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 GrowStocks was an online price index and marketplace for Growtopia. It was founded and created by Matteu back in 2018 and maintained ownership of it up until 2020 when it was transferred to a good friend of his and colleague [Christopher Khawand](https://christopher.khawand.dev). The frontend of the application continued to be maintained through its [end of life](https://christopher.khawand.dev/posts/farewell-growstocks) in December of 2023. It featured state of the art price indexing features, reliable and optimized search, a dashboard to manage the data, a marketplace, a payment platform, and a community that was always growing. The application was proudly built using React, SCSS, and Laravel. And it gave birth to a few [open source projects](https://github.com/GrowStocks).
 
-<section className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <section>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ WorkInfo }>
