--- a/pages/work/inm-audio.mdx
+++ b/pages/work/inm-audio.mdx
@@ -17,7 +17,15 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 INM Audio is one of the Philippine's leading brands when it comes in custom in-ear monitors. Their clients range from the average audiophile seeking a unique tuning, to professionals working on the stage or in the studio. They offer a wide range of products and services, from custom in-ear monitors, to ear impressions, to repairs and maintenance. The company is based in Meycauayan, Bulacan and has been in the industry since 2019.
 
-They've tasked me to make a webapp that would help them streamline the first half of the ordering process (choosing the model, and designing the IEM) and make it more engaging and personal to the end-user. The webapp was built using React, Three, and SCSS.
+They've tasked me to make a webapp that would help them streamline the first half of the ordering process (choosing the model, and designing the IEM) and make it more engaging and personal to the end-user.
+
+## Goals
+Right from the start, the client had a clear goal in mind: to make the ordering process more engaging and personalized. As a manufacturer of custom in-ear monitors, they want potential customers to experience the ordering process to mimic the feeling of ordering a product in real life. On my side, this meant I had to make the experience of ordering feel alive and be as close to what the user's end product would be like in the real world.
+
+## Challenges
+One of the biggest challenges I faced in this project was the rendering of the 3D model. Granted, computer-generated imagery won't ever be as realistic as real life. However, strives in the industry have been made to get there—and if I'm being honest, we're getting close.
+
+
 
 <section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <section>
