Styling and content corrections

--- a/pages/blog/creating-sentro.mdx
+++ b/pages/blog/creating-sentro.mdx
@@ -73,8 +73,11 @@ Himig uses Sentro called through a wrapper around it called Pintig. It governs e
 [Hashi](https://hashi-docs.netlify.app) is another design system that uses Sentro as its core library. Its primary usage in the ecosystem right now is to provide a consistent set of design tokens to be used across their various products. While the components themselves are not being used as of late, the design tokens and theming capabilities of Sentro are being used together with Tailwind CSS.
 
 ## Conclusion
-Ultimately, I just wanted something that could help me build design systems quicker, faster, and with fewer headaches. And that desire led to Sentro. Whether you're starting from scratch or refining an existing system, I hope Sentro can be the solid foundation you can use to build design systems with clarity and confidence.
+Ultimately, I just wanted something that could help me build design systems quicker, faster, and with fewer headaches. And that desire led to Sentro. Whether you're starting from scratch or refining an existing system.
 
+If you want to try it out for yourself, you can find Sentro [here](https://sentro.matteusan.com).
+
+I hope Sentro can be the solid foundation you can use to build design systems with clarity and confidence.
 
 export default function BlogPage({ children }) {
   return (
