--- a/pages/work/inm-audio.mdx
+++ b/pages/work/inm-audio.mdx
@@ -27,26 +27,31 @@ One of the biggest challenges I faced in this project was the rendering of the 3
 
 
 
-<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
+<section>
   <section>
-    <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
     <Info data={ WorkInfo }>
-      <MSButton link={ WorkInfo['link'] } type="small filled">Website</MSButton>
+      <MSButton link={ WorkInfo['link'] } type="outlined">Website</MSButton>
+      <MSButton link="https://facebook.com/inmaudio" type="outlined">Facebook</MSButton>
+      <MSButton link="https://instagram.com/inmaudio" type="outlined">Instagram</MSButton>
     </Info>
-  </section>
-  <section className="start-1 end-1 @large:start-2 @large:end-4">
-    <MSTitleBar clsssName="jc-center" icon={<PhotoIcon />}>Media</MSTitleBar>
-    <div className="w-full grid cols-1 gap-md mt-md">
-      <PreviewImage src="/img/inm-audio/inm-audio-iem-designer.webp" alt="A screen capture of the INM Audio IEM designer." />
-      <PreviewImage src="/img/inm-audio/inm-audio-models-page.webp" alt="A screen capture of the models page." />
-      <PreviewImage src="/img/inm-audio/inm-audio-model-view.webp" alt="A screen capture of the model page." />
-    </div>
   </section>
 </section>
 
 export default function WorkPage({ children }) {
   return (
-    <MarkdownLayout data={ WorkInfo } metadata={ metadata } previewImage="inm-audio.webp" previewImageAlt="The INM Audio landing page.">
+    <MarkdownLayout
+      data={ WorkInfo }
+      metadata={ metadata }
+      previewImage="inm-audio.webp"
+      previewImageAlt="The INM Audio landing page."
+      media={(
+        <>
+          <PreviewImage src="/img/inm-audio/inm-audio-iem-designer.webp" alt="A screen capture of the INM Audio IEM designer." />
+          <PreviewImage src="/img/inm-audio/inm-audio-models-page.webp" alt="A screen capture of the models page." />
+          <PreviewImage src="/img/inm-audio/inm-audio-model-view.webp" alt="A screen capture of the model page." />
+        </>
+      )}
+    >
       { children }
     </MarkdownLayout>
   );
