Update markdown layout

--- a/pages/work/inm-audio.mdx
+++ b/pages/work/inm-audio.mdx
@@ -1,10 +1,5 @@
-import { MSButton, MSTitleBar } from "../../components";
-import {
-  PhotoIcon,
-  QuestionMarkCircleIcon
-} from "@heroicons/react/24/outline";
+import { MSButton } from "../../components";
 import { works } from "../../constants/works";
-import Info from "../../components/markdown/Info";
 import MarkdownLayout from "../../layouts/MarkdownLayout";
 import PreviewImage from "../../components/markdown/PreviewImage";
 
@@ -17,38 +12,27 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 INM Audio is one of the Philippine's leading brands when it comes in custom in-ear monitors. Their clients range from the average audiophile seeking a unique tuning, to professionals working on the stage or in the studio. They offer a wide range of products and services, from custom in-ear monitors, to ear impressions, to repairs and maintenance. The company is based in Meycauayan, Bulacan and has been in the industry since 2019.
 
-They've tasked me to make a webapp that would help them streamline the first half of the ordering process (choosing the model, and designing the IEM) and make it more engaging and personal to the end-user.
-
-## Goals
-Right from the start, the client had a clear goal in mind: to make the ordering process more engaging and personalized. As a manufacturer of custom in-ear monitors, they want potential customers to experience the ordering process to mimic the feeling of ordering a product in real life. On my side, this meant I had to make the experience of ordering feel alive and be as close to what the user's end product would be like in the real world.
-
-## Challenges
-One of the biggest challenges I faced in this project was the rendering of the 3D model. Granted, computer-generated imagery won't ever be as realistic as real life. However, strives in the industry have been made to get there—and if I'm being honest, we're getting close.
-
-
-
-<section>
-  <section>
-    <Info data={ WorkInfo }>
-      <MSButton link={ WorkInfo['link'] } type="outlined">Website</MSButton>
-      <MSButton link="https://facebook.com/inmaudio" type="outlined">Facebook</MSButton>
-      <MSButton link="https://instagram.com/inmaudio" type="outlined">Instagram</MSButton>
-    </Info>
-  </section>
-</section>
+In 2024, they've tasked me to make a webapp that would help them streamline the first half of the ordering process (choosing the model, and designing the IEM) and make it more engaging and personal to the end-user. This increased their web presence, increased traffic, and allowed them to reach more customers while also providing a more convenient way for their customers to order their products from anywhere in the world.
 
 export default function WorkPage({ children }) {
   return (
     <MarkdownLayout
       data={ WorkInfo }
       metadata={ metadata }
-      previewImage="inm-audio.webp"
+      previewImage="inm-audio.png"
       previewImageAlt="The INM Audio landing page."
       media={(
         <>
-          <PreviewImage src="/img/inm-audio/inm-audio-iem-designer.webp" alt="A screen capture of the INM Audio IEM designer." />
-          <PreviewImage src="/img/inm-audio/inm-audio-models-page.webp" alt="A screen capture of the models page." />
-          <PreviewImage src="/img/inm-audio/inm-audio-model-view.webp" alt="A screen capture of the model page." />
+          <PreviewImage src="/img/inm-audio/inm-audio-model-view.png" alt="A screen capture of the model page." />
+          <PreviewImage src="/img/inm-audio/inm-audio-iem-designer.png" alt="A screen capture of the INM Audio IEM designer." />
+          <PreviewImage src="/img/inm-audio/inm-audio-models-page.png" alt="A screen capture of the models page." />
+        </>
+      )}
+      links={(
+        <>
+          <MSButton link={ WorkInfo['link'] } type="small outlined">Website</MSButton>
+          <MSButton link="https://facebook.com/inmaudio" type="small outlined">Facebook</MSButton>
+          <MSButton link="https://instagram.com/inmaudio" type="small outlined">Instagram</MSButton>
         </>
       )}
     >
